<resources>
    <string name="app_name">Patatas App</string>
    <string name="action_settings">Ajustes</string>
    <string name="PatatasApp">Patatas App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="PatatasEMail">mobile@patatascruks.com</string>
    <string name="PatatasIntro">Patatas Introduction</string>
    <string name="sales">Ventas</string>
    <string name="bill">Factura</string>
    <string name="note">Nota</string>
    <string name="charge">Cobro</string>
    <string name="inventory">Inventario</string>
    <string name="dispatch">Despacho</string>
    <string name="returns">Devolución</string>
    <string name="diary">Diario</string>
    <string name="title_activity_transaction">Transaction</string>
    <string name="title_activity_settings">Ajustes</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_0">0</string>
    <string name="num_x">\u2717</string>
    <string name="num_r">\u2713</string>
    <string name="total">TOTAL:</string>
    <string name="action_print">Imprimir</string>
    <string name="action_save">Guardar</string>
    <string name="title_activity_diary">Diario</string>
    <string name="document">#:</string>
    <string name="client">Cliente:</string>
    <string name="is_credit">Crédito?</string>
    <string-array name="additional_transactions">
        <item>Descuento</item>
        <item>Retención</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_client">Cliente Nuevo</string>
    <string name="client_id">ID</string>
    <string name="client_name">Nombre</string>
    <string name="client_phone">Celular</string>
    <string name="client_email">Email</string>
    <string name="client_location">Ubicación</string>
    <string name="change">Cambio</string>
    <string name="gift">Obsequio</string>
    <string name="reports">Reportes</string>
    <string name="title_activity_charge">Cobro</string>
    <string name="title_activity_login">Ingresar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">Este nombre de usuario es incorrecto</string>
    <string name="error_invalid_password">El mínimo númeor de caracteres permitidos es 4.</string>
    <string name="error_incorrect_password">La contraseña está incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="title_activity_map">Clientes</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
