<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/sales">
        <menu>
            <item
                android:id="@+id/nav_bill"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/bill" />
            <item
                android:id="@+id/nav_note"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/note" />
            <item
                android:id="@+id/nav_charge"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/charge" />
        </menu>
    </item>

    <item android:title="@string/inventory">
        <menu>
            <item
                android:id="@+id/nav_dispatch"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/dispatch" />
            <item
                android:id="@+id/nav_return"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/returns" />
            <item
                android:id="@+id/nav_change"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/change" />
            <item
                android:id="@+id/nav_gift"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/gift" />
        </menu>
    </item>

    <item android:title="@string/reports">
        <menu>
            <item
                android:id="@+id/nav_diary"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/diary" />
        </menu>
    </item>

</menu>
