<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.patatascrucks.mobile.model.Transaction">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay" >

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:titleEnabled="false" >

            <LinearLayout
                android:id="@+id/transaction_header"
                android:background="@color/colorPrimaryDark"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" >

                <LinearLayout
                    android:id="@+id/transaction_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3" >

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/lblTransaction_number"
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        style="@style/TextAppearance.AppCompat.Small" >

                        <EditText
                            android:id="@+id/transaction_number"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:hint="@string/document"
                            android:inputType="number"
                            android:textStyle="bold"
                            style="@style/TextAppearance.AppCompat.Small" />

                    </android.support.design.widget.TextInputLayout>

                    <CheckBox
                        android:id="@+id/transaction_credit"
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/is_credit"
                        android:textStyle="bold"
                        style="@style/TextAppearance.AppCompat.Small" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/client_data"
                    android:baselineAligned="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2.5"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/client"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorAccent"
                            style="@style/TextAppearance.AppCompat.Small" />

                        <Spinner
                            android:id="@+id/clients"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            style="@style/TextAppearance.AppCompat.Small"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5" >

                        <ImageButton
                            android:id="@+id/add_client"
                            android:background="@color/colorPrimaryDark"
                            android:contentDescription="@string/PatatasApp"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:src="@android:drawable/ic_menu_add" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_list"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:fitsSystemWindows="true"
        tools:listitem="@layout/transaction_row"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <LinearLayout
        android:id="@+id/transaction_footer"
        android:layout_alignParentBottom="true"
        android:layout_height="46dp"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:fitsSystemWindows="true" >

        <TextView
            android:background="@color/colorPrimaryDark"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.6" />

        <TextView
            android:background="@color/colorPrimaryDark"
            android:gravity="center|end"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:text="@string/total"
            style="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:background="@color/colorPrimaryDark"
            android:gravity="center|end"
            android:id="@+id/txtTotal"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:textStyle="bold"
            style="@style/TextAppearance.AppCompat.Small" />

    </LinearLayout>

    <include
        layout="@layout/custom_numpad"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="top|center"
        app:behavior_hideable="true"
        app:layout_behavior="@string/bottom_sheet_behavior" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_menu_add"
        app:layout_anchor="@id/transaction_footer"
        app:layout_anchorGravity="top|start"/>

</android.support.design.widget.CoordinatorLayout>
